add upload function
